SSAO in solid mode in viewport disables Antialiasing for wireframe mode too. #44076

Closed
opened 2015-03-21 15:11:10 +01:00 by Adam Preisler · 16 comments

System Information
Not relevant

Blender Version
Broken: 2.74
Hash: 3824e0f1

Short description of error
I know SSAO can't have antialias by itself, except maybe for FXAA, but for some reason, when you enable ambient occlusion in solid mode, it disables antialiasing for all the other modes that it would not have to.

Exact steps for others to reproduce the error
Turn on antialiasing in CTRL ALT U
save preferences
restart blender
Turn on SSAO in viewport

  • antialiasing doesn't work
    press Z to change into wireframe mode
  • antialiasing also doesn't work
    press Z to go back to solid mode
    Turn off SSAO in viewport
    press Z to go to wireframe mode again
    antialiasing works now
**System Information** Not relevant **Blender Version** Broken: 2.74 Hash: 3824e0f1 **Short description of error** I know SSAO can't have antialias by itself, except maybe for FXAA, but for some reason, when you enable ambient occlusion in solid mode, it disables antialiasing for all the other modes that it would not have to. **Exact steps for others to reproduce the error** Turn on antialiasing in CTRL ALT U save preferences restart blender Turn on SSAO in viewport - antialiasing doesn't work press Z to change into wireframe mode - antialiasing also doesn't work press Z to go back to solid mode Turn off SSAO in viewport press Z to go to wireframe mode again antialiasing works now
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler
Author

I was checking it very properly again and it seems SSAO stays on even for wireframe mode + bounding box mode (even though there's no option in the menu to turn it off at that point) and some information is lost. Antialiasing still works though at all time.

AAvsSSAO_Problem2.png SSAO interfering with AA

AAvsSSAO_Problem1.png 16x AA itself as it should be

I was checking it very properly again and it seems SSAO stays on even for wireframe mode + bounding box mode (even though there's no option in the menu to turn it off at that point) and some information is lost. Antialiasing still works though at all time. ![AAvsSSAO_Problem2.png](https://archive.blender.org/developer/F153729/AAvsSSAO_Problem2.png) SSAO interfering with AA ![AAvsSSAO_Problem1.png](https://archive.blender.org/developer/F153728/AAvsSSAO_Problem1.png) 16x AA itself as it should be
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

@Psy-Fi, maybe we should force SSAO to be disabled in Wireframe Mode? (Or maybe it is and we just need to ensure AA isn't disabled?)

@Psy-Fi, maybe we should force SSAO to be disabled in Wireframe Mode? (Or maybe it is and we just need to ensure AA isn't disabled?)
Antonis Ryakiotakis was assigned by Julian Eisel 2015-03-22 13:13:06 +01:00

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Nope, it's a known limitation, see the release notes http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.74/UI

Nope, it's a known limitation, see the release notes http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.74/UI
Author

Read it properly please.

Read it properly please.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

This looks like a UI problem - FX options should not stay hidden in wireframe, but indeed we could probably just disable effects altogether in wireframe mode.

This looks like a UI problem - FX options should not stay hidden in wireframe, but indeed we could probably just disable effects altogether in wireframe mode.
Member

For me hiding the options in wireframe seems fine. These options don't make much sense then.

For me hiding the options in wireframe seems fine. These options don't make much sense then.
Author

Yeah, I think that SSAO should be turned off in wireframe and bounding box mode.

Yeah, I think that SSAO should be turned off in wireframe and bounding box mode.

This issue was referenced by f65e3c7f1b

This issue was referenced by f65e3c7f1b5aaa9b5376c20a36267aad27ce40ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f65e3c7f1b.

Closed by commit f65e3c7f1b.

This issue was referenced by 07e815df4b

This issue was referenced by 07e815df4bd4ad28065f19d7025623f9fc53faed
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44076
No description provided.